Skal sette avslag hvis det ikke er noen perioder med krav igjen