@@ -1,6 +1,7 @@
 package no.nav.k9.sak.ytelse.pleiepengerbarn.beregnytelse;
 
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
 
 import javax.enterprise.context.ApplicationScoped;
@@ -17,6 +18,7 @@ import no.nav.k9.sak.behandlingskontroll.FagsakYtelseTypeRef;
 import no.nav.k9.sak.behandlingslager.behandling.repository.BehandlingRepository;
 import no.nav.k9.sak.behandlingslager.behandling.repository.BehandlingRepositoryProvider;
 import no.nav.k9.sak.behandlingslager.behandling.vedtak.VedtakVarselRepository;
+import no.nav.k9.sak.behandlingslager.behandling.vilkår.Vilkår;
 import no.nav.k9.sak.behandlingslager.behandling.vilkår.Vilkårene;
 import no.nav.k9.sak.domene.behandling.steg.foreslåresultat.ForeslåBehandlingsresultatTjeneste;
 import no.nav.k9.sak.domene.typer.tid.DatoIntervallEntitet;
@@ -67,6 +69,11 @@ public class UttakForeslåBehandlingsresultatTjeneste extends ForeslåBehandling
             return true;
         }
 
+        var harIngenPerioderForMedisinsk = harIngenPerioderForMedisinsk(vilkårene);
+        if (harIngenPerioderForMedisinsk) {
+            return true;
+        }
+
         final var maksPeriode = getMaksPeriode(ref.getBehandlingId());
         final var vilkårTidslinjer = vilkårene.getVilkårTidslinjer(maksPeriode);
 
@@ -74,8 +81,8 @@ public class UttakForeslåBehandlingsresultatTjeneste extends ForeslåBehandling
             .filter(e -> harAvslåtteVilkårsPerioder(e.getValue())
                 && harIngenOppfylteVilkårsPerioder(e.getValue())
             )
-            .map(e -> e.getKey())
-            .collect(Collectors.toList());
+            .map(Map.Entry::getKey)
+            .toList();
 
         if (avslåtteVilkår.isEmpty()) {
             return false;
@@ -90,5 +97,12 @@ public class UttakForeslåBehandlingsresultatTjeneste extends ForeslåBehandling
 
 
         return ingenAvSykdomsvilkåreneErOppfylt;
+    }
+
+    private boolean harIngenPerioderForMedisinsk(Vilkårene vilkårene) {
+        var perioderMedisinskUnder18 = vilkårene.getVilkår(VilkårType.MEDISINSKEVILKÅR_UNDER_18_ÅR).map(Vilkår::getPerioder).orElse(List.of());
+        var perioderMedisinskOver18 = vilkårene.getVilkår(VilkårType.MEDISINSKEVILKÅR_18_ÅR).map(Vilkår::getPerioder).orElse(List.of());
+
+        return perioderMedisinskUnder18.isEmpty() && perioderMedisinskOver18.isEmpty();
     }
 }
